e12 Fixed wrap text for descriptions in offer list

--- a/src/main/webapp/resources/assets/css/main_decorator.css
+++ b/src/main/webapp/resources/assets/css/main_decorator.css
@@ -859,6 +859,8 @@ pre.parsed-text {
     background-color: transparent;
     border: 0;
     font: inherit;
+    overflow: hidden;
+    white-space: pre-wrap;
 }
 
 pre.parsed-text.list {
